# aero

./: .gitignore  angular.json  package-lock.json  package.json
.github/workflows/: build.yml
src/: styles.css
src-tauri/: Cargo.toml  blocklist.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adblock.rs  commands.rs  lib.rs  main.rs  tab_manager.rs
src/app/: app.component.css  app.component.html  app.component.ts
src/app/components/bookmarks-panel/: bookmarks-panel.component.css  bookmarks-panel.component.html  bookmarks-panel.component.ts
src/app/components/new-tab-page/: new-tab-page.component.css  new-tab-page.component.html  new-tab-page.component.ts
src/app/components/settings-panel/: settings-panel.component.css  settings-panel.component.html  settings-panel.component.ts
src/app/components/tab-bar/: tab-bar.component.css  tab-bar.component.html  tab-bar.component.ts
src/app/components/toolbar/: toolbar.component.css  toolbar.component.html  toolbar.component.ts
src/app/services/: bookmark.service.ts  settings.service.ts  tab.service.ts
